This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: os.stat fails when access is denied
Type: behavior Stage: resolved
Components: Windows Versions: Python 3.7, Python 3.6, Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: berker.peksag, eryksun, paul.moore, python-dev, ramson, steve.dower, tim.golden, zach.ware
Priority: normal Keywords: patch

Created on 2016-09-11 09:04 by ramson, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
issue_28075_01.patch eryksun, 2016-09-11 14:11 review
Pull Requests
URL Status Linked Edit
PR 552 closed dstufft, 2017-03-31 16:36
Messages (6)
msg275750 - (view) Author: ramson (ramson) Date: 2016-09-11 09:04
doing os.stat on the directory c:\config.msi gives different results on my Windows 10 machine, when done with py27 and py35
------------------------------------------------------
Python 2.7.12 (v2.7.12:d33e0cf91556, Jun 27 2016, 15:24:40) [MSC v.1500 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import os
>>> os.stat('c:\\config.msi')
nt.stat_result(st_mode=16895, st_ino=0L, st_dev=0L, st_nlink=0, st_uid=0, st_gid=0, st_size=2891776L, st_atime=1473584558L, st_mtime=1473584558L, st_ctime=1449228297L)

------------------------------------------------------
Python 3.5.2 (v3.5.2:4def2a2901a5, Jun 25 2016, 22:18:55) [MSC v.1900 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import os
>>> os.stat('c:\\config.msi')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
PermissionError: [WinError 5] Zugriff verweigert: 'c:\\config.msi'

-> Access denied
msg275777 - (view) Author: Eryk Sun (eryksun) * (Python triager) Date: 2016-09-11 12:03
Python 3's os.stat tries to open a handle for the file or directory in order to call GetFileInformationByHandle. Opening a file handle via CreateFile requests at least FILE_READ_ATTRIBUTES and SYNCHRONIZE access when it calls NtCreateFile. If access is denied, os.stat is supposed to fall back on the basic WIN32_FIND_DATA information from FindFirstFile. However, it's not working as intended. For example:

    >>> import os
    >>> os.mkdir('test')
    >>> os.system('icacls test /deny Users:(S,RA)')
    processed file: test
    Successfully processed 1 files; Failed processing 0 files
    0

    >>> os.stat('test')
    Traceback (most recent call last):
      File "<stdin>", line 1, in <module>
    PermissionError: [WinError 5] Access is denied: 'test'

The problem is that it's mistakenly checking for ERROR_SHARING_VIOLATION instead of ERROR_ACCESS_DENIED. Technically, getting a sharing violation should be impossible here. That only applies to requesting execute (traverse), read (list), write (add file), append (add subdirectory), or delete access for the contents of the file or directory, not its metadata.

After modifying the code to instead check for ERROR_ACCESS_DENIED, os.stat correctly falls back on using the file attributes from the WIN32_FIND_DATA:

    >>> os.stat('test')
    os.stat_result(st_mode=16895, st_ino=0, st_dev=0, st_nlink=0, 
    st_uid=0, st_gid=0, st_size=0, st_atime=1473589600, 
    st_mtime=1473589600, st_ctime=1473589600)
msg275795 - (view) Author: Eryk Sun (eryksun) * (Python triager) Date: 2016-09-11 14:11
I overlooked attempting to open a paging-file for any access, which is hard coded as a sharing violation. The attached patch checks for both cases.
msg276791 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-09-17 12:50
New changeset eabb86463462 by Berker Peksag in branch '3.5':
Issue #28075: Check for ERROR_ACCESS_DENIED in Windows implementation of os.stat()
https://hg.python.org/cpython/rev/eabb86463462

New changeset 4071a7cf6437 by Berker Peksag in branch '3.6':
Issue #28075: Merge from 3.5
https://hg.python.org/cpython/rev/4071a7cf6437

New changeset b04d5864e59a by Berker Peksag in branch 'default':
Issue #28075: Merge from 3.6
https://hg.python.org/cpython/rev/b04d5864e59a
msg276792 - (view) Author: Berker Peksag (berker.peksag) * (Python committer) Date: 2016-09-17 12:51
Thanks, Eryk.
msg276877 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-09-18 10:57
New changeset 20c4ad866620 by Berker Peksag in branch '3.5':
Issue #28075: Fix test_access_denied in Python 3.5
https://hg.python.org/cpython/rev/20c4ad866620
History
Date User Action Args
2022-04-11 14:58:36adminsetgithub: 72262
2021-02-25 11:27:16eryksunlinkissue26968 superseder
2017-03-31 16:36:34dstufftsetpull_requests: + pull_request1069
2016-09-18 10:57:15python-devsetmessages: + msg276877
2016-09-17 12:51:48berker.peksagsetstatus: open -> closed

versions: + Python 3.7
nosy: + berker.peksag

messages: + msg276792
resolution: fixed
stage: patch review -> resolved
2016-09-17 12:50:44python-devsetnosy: + python-dev
messages: + msg276791
2016-09-12 00:44:57eryksunsetstage: patch review
2016-09-11 14:11:27eryksunsetfiles: + issue_28075_01.patch
keywords: + patch
messages: + msg275795
2016-09-11 12:03:25eryksunsetnosy: + eryksun
title: py35 os.stat behavoir different than python 2.7 -> os.stat fails when access is denied
messages: + msg275777

versions: + Python 3.6
2016-09-11 09:04:40ramsoncreate