Issue #28075: Check for ERROR_ACCESS_DENIED in Windows implementation of os.stat()

Patch by Eryk Sun.